Refactored for java 21. I had java 17 incorrectly!